Added new functionality for working with local data of the regional database. 13.01.2023

--- a/src/main/resources/templates/karta/historearest.html
+++ b/src/main/resources/templates/karta/historearest.html
@@ -108,9 +108,8 @@
 
             <td id="col_3">
                 <a> <b th:text="${#dates.format(AmtHyst.getData_oper, 'dd.MM.yyyy  HH-mm')}"></b></a>
-<!--                <p><b th:datetime="${AmtHyst.getData_oper()}"></b></p>-->
-                <br>
-                <p> <b th:text="${AmtHyst.getCode_oper}"> </b></p>
+<!--                <br>-->
+<!--                <p> <b th:text="${AmtHyst.getCode_oper}"> </b></p>-->
             </td>
 
             <td id="col_4"><b th:text="${AmtHyst.getFamily+' '+ AmtHyst.getFname+' '+ AmtHyst.getSec_name}"></b>
