--- a/src/main/resources/templates/karta/searchAMT.html
+++ b/src/main/resources/templates/karta/searchAMT.html
@@ -14,17 +14,20 @@
     <label for="Znak" >Номерний знак: </label>
     <input type="text" th:field="*{znak}" id="Znak"/>
 
-    <br/>
+    <br>
     <label  for="Znak">Свідоцтво про реєстр : </label>
     <input type="text" th:field="*{teh_pasp}" id="teh_pasp"/>
     <br/>
 
-    <input type="submit" value="Пошук"/>
-<!--    <br/>-->
-<!--    <input type="checkbox">-->
-<!--    <br/>-->
+    <label  for="Znak">Vin : </label>
+    <input type="text" th:field="*{kart_id}" id="kart_id"/>
+    <br/>
 
-<!--    <input type="date">-->
+    <label  for="Znak">№ кузова : </label>
+    <input type="text" th:field="*{num_cuz}" id="num_cuz"/>
+    <br/>
+
+    <input type="submit" value="Пошук"/>
 
 <!--    <oo>Carefully Styled Heading</oo>-->
 
