--- a/src/main/resources/templates/karta/history.html
+++ b/src/main/resources/templates/karta/history.html
@@ -7,8 +7,8 @@
     <title>History</title>
 
     <style type="text/css">
-        <style>
-
+        <
+        style >
         .hystory {
             width: 50%; /* ширина элемента */
             display: flex;
@@ -57,6 +57,7 @@
         .tr2 {
 
         }
+
         .th2, .td2 { /* ячейки таблиці */
             border: 1px solid black; /* Параметры рамки */
             text-align: left; /* Выравнивание по центру */
