--- a/src/main/resources/templates/rubin/rubin.html
+++ b/src/main/resources/templates/rubin/rubin.html
@@ -6,16 +6,17 @@
 </head>
 <body>
 <!--/*@thymesVar id="tit" type=""*/-->
-<div>  <header th:insert="blocks/header.html :: header"></header>
-<h1 th:text="${tsc}"/>
-        <form action="../printer/toppan-add" method="post">
-            <input type="text" name="sn" placeholder="Серийній номер" class="form-control"><br>
-            <input type="text" name="code" placeholder="Номенклатурный номер" class="form-control"><br>
-            <input type="text" name="datawork" placeholder="Дата ввеения в эксплуатацию" class="form-control"><br>
-            <input type="text" name="pidrozdil" placeholder="Підрозділ" class="form-control"><br>
-            <textarea name="completeness" placeholder="Комплектность" class="form-control"></textarea><br>
-            <button type="submit" class="btn btn-success">Записать</button>
-        </form>
+<div>
+    <header th:insert="blocks/header.html :: header"></header>
+    <h1 th:text="${tsc}"/>
+    <form action="../printer/toppan-add" method="post">
+        <input type="text" name="sn" placeholder="Серийній номер" class="form-control"><br>
+        <input type="text" name="code" placeholder="Номенклатурный номер" class="form-control"><br>
+        <input type="text" name="datawork" placeholder="Дата ввеения в эксплуатацию" class="form-control"><br>
+        <input type="text" name="pidrozdil" placeholder="Підрозділ" class="form-control"><br>
+        <textarea name="completeness" placeholder="Комплектность" class="form-control"></textarea><br>
+        <button type="submit" class="btn btn-success">Записать</button>
+    </form>
 </div>
 </body>
 </html>
