Added new functionality for working with local data of the regional database. 21.01.2023

--- a/src/main/resources/templates/karta/searchAMT.html
+++ b/src/main/resources/templates/karta/searchAMT.html
@@ -49,7 +49,9 @@
 
     <br/>
     <label >Остання операція ТЗ</label>
-    <input style="margin-left: 16px" type="checkbox">
+
+
+    <input style="margin-left: 16px" type="checkbox" id="checked">
     <br/>
     <input type="submit" value="Пошук"/>
 
