Added new functionality for working with local data of the regional database. 25.01.2023

--- a/src/main/resources/templates/karta/searchAMT.html
+++ b/src/main/resources/templates/karta/searchAMT.html
@@ -50,8 +50,9 @@
     <br/>
     <label >Остання операція ТЗ</label>
 
-
-    <input style="margin-left: 16px" type="checkbox" id="checked">
+    <!--/*@thymesVar id="checkbox1" type=""*/-->
+    <input type="checkbox" name="checkbox1" th:checked="${checkbox1}" />
+<!--    <input style="margin-left: 16px" type="checkbox" id="checked" name="checked">-->
     <br/>
     <input type="submit" value="Пошук"/>
 
