--- a/src/main/resources/templates/karta/viewKarta.html
+++ b/src/main/resources/templates/karta/viewKarta.html
@@ -48,7 +48,7 @@
             <th>Дата операции</th>
             <th>ДНЗ / свідоцтво</th>
             <th> VIN</th>
-            <th>ДНЗ марка модель</th>
+            <th>Марка модель</th>
             <th>Власник</th>
         </tr>
         <tr th:each="kart : ${kartaList}">
